<resources>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">FME Reporter</string>
    <string name="settings_button_label">Settings</string>
    <string name="FME_server_host_label">FME Server Host</string>
    <string name="URL_label">URL</string>
    <string name="FME_Server_login">FME Server Login</string>
    <string name="Host_label">Host</string>
    <string name="Password_label">Password</string>
    <string name="Username_label">Username</string>
    <string name="Email_label">Email Address (Optional)</string>
    <string name="FME_Server_topic_label">FME Server Topic</string>
    <string name="Message_label">Message</string>
    <string name="Title_label">Title (Optional)</string>
    <string name="Description_label">Description (Optional)</string>
    <string name="Time_interval_label">Time Interval (In Minutes)</string>
    <string name="Distance_filter_label">Distance Filter (In Meters)</string>
    <string name="Clear_pins_label">Clear when timer starts</string>
    <string name="Pins_label">Pins</string>
    <string name="About_label">About This App</string>
    <string name="Goto_safe_label">About Safe Software</string>
    <string name="Goto_server_label">About FME Server</string>
    <string name="send_button_label">Send</string>
    <string name="cancel_button_label">Stop</string>
    <string name="start_button_label">Start</string>
    <string name="Use_time_interval">Use time interval</string>
    <string name="ClearAllPins">Do you want to remove all pins?</string>
    <string name="LocationReported">Location Reported</string>
    <string name="UnableToReport">Unable to Report Location</string>
    <string name="insufficient_server_info">Insufficient Server Info</string>
    <string name="insufficient_info_details">Please enter the host, username, and password and then choose at least one topic to report your current location.</string>
    <string name="time_interval">Time Interval</string>
    <string name="distance_filter">Distance Filter</string>
    <string name="high_precision">High Precision</string>
    <string name="topics">Topics</string>
    <string name="location_tracking">Location Tracking</string>
    <string name="username">Username</string>
    <string name="host">Host</string>
    <string name="fme_server_account_information">FME SERVER ACCOUNT INFORMATION</string>
    <string name="details">Details</string>
    <string name="settings">Settings</string>
    <string name="gpsOptions">LOCATION OPTIONS</string>
    <string name="autoReportLocation">Auto Report Location</string>
    <string name="highPrecision">High Precision</string>
    <string name="version">Version</string>
    <string name="poweredBy">Powered by FME Server</string>
    <string name="gotoSafeCom">About Safe Software</string>
    <string name="gotoServerHomepage">About FME Server</string>
    <string name="GotoServicePage">About Notification Service</string>
    <string name="copyright">Copyright © 2014 by Safe Software Inc. \nAll rights reserved\n\nOpen Source Acknowledgements...</string>
    <string name="copyright_expanded">Copyright © 2014 by Safe Software Inc. \nAll rights reserved\n\nOpen Source Acknowledgements: \nCopyright 2005-2008 The Android Open Source Project \nThis product includes software developed as part of The Android Open Source Project (http://source.android.com).</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="Topic_size">topic_num</string>
    <string name="topic">topic</string>
    <string name="Save_and_Remove_Subscriptions">Do you want to save the change and remove all previous subscriptions?</string>
    <string name="dont_save">Don\'t Save</string>
    <string name="from">FROM</string>
    <string name="firstNameLabel">First Name</string>
    <string name="lastNameLabel">Last Name</string>
    <string name="emailLabel">Email</string>
    <string name="subjectLabel">Subject</string>
    <string name="webAddressLabel">Web Address</string>
    <string name="detailsLabel">Details</string>
    <string name="message">MESSAGE</string>
    <string name="optional">Optional</string>
    <string name="updateOptions">UPDATE OPTIONS</string>
    <string name="messageSummary">Attach a message to location update.</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
</resources>