<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/relativeScrollLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingRight="5dp"
        android:paddingBottom="10dp"
         >

        <TextView
            android:id="@+id/title_acct_info"
            style="@style/groupCategoryHeading"
            android:text="FME SERVER ACCOUNT INFORMATION" />

        <View style="@style/groupLineBreak" />

        <LinearLayout
            android:baselineAligned="false"
            android:id="@+id/accountInfoLayout"
            style="@style/transparentLinearLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:orientation="horizontal" >

            <RelativeLayout
                android:id="@+id/titlesForAcctInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/textHost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginBottom="3dp"
                    android:text="@string/host"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/textHost"
                    android:text="@string/username"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/DataForAcctInfo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" >

                <TextView
                    android:id="@+id/serverNameLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:gravity="right"
                    android:ellipsize="end"
                    android:lines="1"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/userNameLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_below="@+id/serverNameLabel"
                    android:gravity="right"
                    android:ellipsize="end"
                    android:lines="1"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </RelativeLayout>
        </LinearLayout>

        <View style="@style/groupLineBreak_Small2" />

        <RelativeLayout
            android:id="@+id/topicsToSubscribe"
            style="@style/transparentLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:paddingTop="15dp" >

            <TextView
                android:id="@+id/topics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Alert Topics"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/numSelectedLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="0 selected"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RelativeLayout>

        <View style="@style/groupLineBreak_Small2"
            android:id="@+id/horizontalRuleAlert"
             />

        <RelativeLayout
            android:id="@+id/topicsToSubscribeReport"
            style="@style/transparentLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:paddingTop="15dp" >

            <TextView
                android:id="@+id/topicsReport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Report Topics"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/numSelectedLabelReport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="0 selected"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RelativeLayout>

        <View style="@style/groupLineBreak_Small2" />

        <TextView
            android:id="@+id/textView2"
            style="@style/groupCategoryHeading"
            android:layout_marginTop="15dp"
            android:text="LOCATION OPTIONS" />

        <View style="@style/groupLineBreak" />

        <LinearLayout
            android:id="@+id/RelativeLayoutHP"
            style="@style/transparentLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="High Precision GPS"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:orientation="horizontal" >

                    <Switch
                        android:checked="true"
                        android:id="@+id/highPrecisionCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

            <View style="@style/groupLineBreak_Small" />
        </LinearLayout>

        <LinearLayout
            style="@style/transparentLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/autoReportLocationLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="@string/autoReportLocation"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:orientation="horizontal" >

                    <Switch
                        android:id="@+id/AutoReportLocationCheckbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

            <View style="@style/groupLineBreak_Small" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/timeIntervalLayout"
            style="@style/transparentLinearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal"
                android:paddingTop="15dp" >

                <TextView
                    
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="Time Interval"
                    android:textAppearance="@android:style/TextAppearance.Medium" />

                <TextView
                    android:id="@+id/timeIntervalTextMin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:gravity="right"
                    android:hint="1 Min"
                    android:textAppearance="@android:style/TextAppearance.Medium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >

                <LinearLayout
                    android:id="@+id/timeIntervalPicker"
                    style="@style/timeIntervalWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:visibility="gone" >

                    <NumberPicker
                        android:id="@+id/minutePicker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:descendantFocusability="blocksDescendants" />

                    <NumberPicker
                        android:id="@+id/secondPicker"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:descendantFocusability="blocksDescendants" />
                </LinearLayout>
            </LinearLayout>

            <View style="@style/groupLineBreak_Small" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/filteringLayout"
            style="@style/transparentLinearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="15dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="Distance Filter"
                    android:textAppearance="@android:style/TextAppearance.Medium" />

                <TextView
                    android:id="@+id/distanceFilterText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:gravity="right"
                    android:hint="500 Meters"
                    android:textAppearance="@android:style/TextAppearance.Medium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >

                <NumberPicker
                    android:id="@+id/distancePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:descendantFocusability="blocksDescendants"
                    android:visibility="gone" />
            </LinearLayout>

            <View style="@style/groupLineBreak_Small" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/networkGroup"
            >
        
        <TextView
            android:id="@+id/textView3"
            style="@style/groupCategoryHeading"
            android:layout_marginTop="15dp"
            android:text="NETWORK CONNECTION" />

        <View style="@style/groupLineBreak" />

        <LinearLayout
            android:id="@+id/netwrokLayout"
            style="@style/transparentLinearLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/messageText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Store Unsent Reports"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Switch
                android:id="@+id/saveUnsentReports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <View
            style="@style/groupLineBreak_Small2"
            android:layout_marginRight="7dp" />
    </LinearLayout>
</LinearLayout>
</ScrollView>